--- a/_includes/default.html
+++ b/_includes/default.html
@@ -84,7 +84,7 @@
 			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i> 栏目</a></li>
 			<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i> 标签</a></li>
 			<li class="divider"></li>
-			<li><a href="#"><i class="fa fa-arrow-up"></i> 开头</a></li>
+			<li><a href="#"><i class="fa fa-arrow-up"></i> 回到顶部</a></li>
 		</ul>
 	</div>
 
