修复页脚的断行

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ article.home h4 a:hover {
   margin-right: 20px;
 }
 
-footer span {
+footer>div {
 	white-space: nowrap;
 	display: inline-block;
 }
