--- a/_includes/default.html
+++ b/_includes/default.html
@@ -97,11 +97,15 @@
 
 		<footer>
 			<hr/>
-			<p>
-				<span></span><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">{{ site.title }}</span> 版权所有 {{ site.time | date: '%Y' }} <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.qifun.com" property="cc:attributionName" rel="cc:attributionURL">深圳岂凡网络有限公司</a>。保留所有权利。</span>
-				<span>{{ site.title }}以<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">知识共享 署名-相同方式共享 4.0 国际 许可协议</a>进行许可。</span>
-				<span>{{ site.title }}的主题样式基于<a href="https://github.com/dbtek">dbtek</a>创作的<a href="https://github.com/dbtek/dbyll">dbyll</a>，以<a href="{{ site.BASE_PATH }}/LICENSE-dbyll">The MIT License</a>进行许可。</span>
-			</p>
+			<div>
+				<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">{{ site.title }}</span> 版权所有 {{ site.time | date: '%Y' }} <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.qifun.com" property="cc:attributionName" rel="cc:attributionURL">深圳岂凡网络有限公司</a>。保留所有权利。
+			</div>
+			<div>
+				{{ site.title }}以<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">知识共享 署名-相同方式共享 4.0 国际 许可协议</a>进行许可。
+			</div>
+			<div>
+				{{ site.title }}的主题样式基于<a href="https://github.com/dbtek">dbtek</a>创作的<a href="https://github.com/dbtek/dbyll">dbyll</a>，以<a href="{{ site.BASE_PATH }}/LICENSE-dbyll">The MIT License</a>进行许可。
+			</div>
 		</footer>
 	</div>
 
