--- a/_includes/default.html
+++ b/_includes/default.html
@@ -67,9 +67,9 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="{{ site.BASE_PATH }}/">首页</a></li>
-				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">栏目</a></li>
-				<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">标签</a></li>
+				<li class="active"><a href="{{ site.BASE_PATH }}/">棣栭〉</a></li>
+				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">鏍忕洰</a></li>
+				<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">鏍囩</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
@@ -80,11 +80,11 @@
 			<i class="fa fa-bars"></i>
 		</button>
 		<ul class="dropdown-menu" role="menu">
-			<li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i>首页</a></li>
-			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i>栏目</a></li>
-			<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i>标签</a></li>
+			<li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i>棣栭〉</a></li>
+			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i>鏍忕洰</a></li>
+			<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i>鏍囩</a></li>
 			<li class="divider"></li>
-			<li><a href="#"><i class="fa fa-arrow-up"></i>回到顶部</a></li>
+			<li><a href="#"><i class="fa fa-arrow-up"></i>鍥炲埌椤堕儴</a></li>
 		</ul>
 	</div>
 
