--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.baseurl }}/">
-		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+		<img src="{{ site.github.owner_gravatar_url }}" class="img-circle" />
 	</a>
 	<h3 class="title">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
@@ -16,16 +16,14 @@
 
 <div id="contact-list" class="text-center">
 	<ul class="list-unstyled list-inline">
-		{% if site.author.github %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
+			<a class="btn btn-default btn-sm" href="{{ site.github.owner_url }}">
 				<i class="fa fa-github fa-lg"></i>
 			</a>
 		</li>
-		{% endif %}
-		{% if site.author.twitter %}
+		{% if site.twitter %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
+			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.twitter }}">
 				<i class="fa fa-twitter fa-lg"></i>
 			</a>
 		</li>
@@ -37,25 +35,25 @@
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.email %}
+		{% if site.email %}
 		<li>
-			<a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}">
+			<a class="btn btn-default btn-sm" href="mailto:{{ site.email }}">
 				<i class="fa fa-envelope fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 	</ul>
 	<ul id="contact-list-secondary" class="list-unstyled list-inline">
-		{% if site.author.pinterest %}
+		{% if site.pinterest %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.author.pinterest }}">
+			<a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.pinterest }}">
 				<i class="fa fa-pinterest fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.linkedin %}
+		{% if site.linkedin %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
+			<a class="btn btn-default btn-sm" href="https://linkedin.com/pub/{{ site.linkedin }}">
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
