Update sidebar.html Conflicts: 	_includes/sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.baseurl }}/">
-		<img src="{{ site.github.owner_gravatar_url }}" class="img-circle" />
+		<img width="150" height="150" src="{{ site.github.owner_gravatar_url }}" class="img-circle" />
 	</a>
 	<h3 class="title">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
