Support site.bitbucket
Conflicts:
	_includes/sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
 		{% if site.author.github %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
+				<i class="fa fa-github fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
@@ -27,6 +27,13 @@
 		<li>
 			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
 				<i class="fa fa-twitter fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
+		{% if site.bitbucket %}
+		<li>
+			<a class="btn btn-default btn-sm" href="http://bitbucket.org/{{ site.bitbucket }}">
+				<i class="fa fa-bitbucket fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
