--- a/_includes/default.html
+++ b/_includes/default.html
@@ -68,8 +68,8 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="{{ site.baseurl }}/">首页</a></li>
-				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">栏目</a></li>
-				<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">标签</a></li>
+				<li><a href="{{ site.baseurl }}/{{ site.categories_path }}">栏目</a></li>
+				<li><a href="{{ site.baseurl }}/{{ site.tags_path }}">标签</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
@@ -80,9 +80,9 @@
 			<i class="fa fa-bars"></i>
 		</button>
 		<ul class="dropdown-menu" role="menu">
-			<li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i>首页</a></li>
-			<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i>栏目</a></li>
-			<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i>标签</a></li>
+			<li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i>首页</a></li>
+			<li><a href="{{ site.baseurl }}/{{ site.categories_path }}"><i class="fa fa-folder"></i>栏目</a></li>
+			<li><a href="{{ site.baseurl }}/{{ site.tags_path }}"><i class="fa fa-tags"></i>标签</a></li>
 			<li class="divider"></li>
 			<li><a href="#"><i class="fa fa-arrow-up"></i>回到顶部</a></li>
 		</ul>
